@@ -22,3 +22,4 @@
 14-Oct-2021 - V0.28 Extend the path search for model structures in RepositoryProvider()
 17-Oct-2021 - V0.29 Repath consolidated computed models directory in RepositoryProvider()
 17-Oct-2021 - V0.30 Update hierarchical search path for models in RepositoryProvider()
+13-Jan-2022 - V0.31 Update hierarchical search path for models in RepositoryProvider(), and to use configured PDBX_COMP_MODEL_SANDBOX_PATH value for topRepoPath
